kube/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: argocd-ingress
 namespace: argocd
 annotations: 
   nginx.ingress.kuberbetes.io/rewrite_target: /
spec:
 ingressClassName: nginx
 rules:
   - host: argocd.gosocial.local
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: argocd-server
               port:
                 number: 80
